k8s/omegaup/overlays/production/backend/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: broadcaster-deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: v1.9.66
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: omegaup-eks-nodes-al2023
      containers:
      - name: broadcaster
        resources:
          limits:
            memory: 64Mi
