k8s/omegaup/overlays/production/backend/gitserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gitserver-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/version: v1.9.17
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: omegaup-eks-nodes-al2023
        topology.kubernetes.io/zone: us-east-1a
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: gitserver
        resources:
          limits:
            memory: 1536Mi
          requests:
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /health/live
