k8s/omegaup/overlays/production/backend/grader-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grader-ingress
  namespace: omegaup
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: grader.omegaup.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grader-service
            port:
              number: 11302
  tls:
  - hosts:
    - grader.omegaup.com
    secretName: grader-ingress-cert
